--- a/RaceManager/Client/MainWindow.xaml
+++ b/RaceManager/Client/MainWindow.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Button Content="Button" Click="Button_Click" HorizontalAlignment="Left" Margin="362,195,0,0" VerticalAlignment="Top" Width="75"/>
     </Grid>
 </Window>
