--- a/RaceManager/Client/MainWindow.xaml
+++ b/RaceManager/Client/MainWindow.xaml
@@ -11,5 +11,6 @@
         <TextBox x:Name="TUsername" HorizontalAlignment="Left" Height="23" Margin="226,66,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="TPassword" HorizontalAlignment="Left" Height="23" Margin="351,66,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <Button Content="Login" Click="Login_Click" HorizontalAlignment="Left" Margin="489,69,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Content="Test" Click="Test_Click" HorizontalAlignment="Left" Margin="362,269,0,0" VerticalAlignment="Top" Width="75"/>
     </Grid>
 </Window>
