--- a/RaceManager/Client/MainWindow.xaml
+++ b/RaceManager/Client/MainWindow.xaml
@@ -4,13 +4,44 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Client"
+        xmlns:views="clr-namespace:Client.Views"
+        xmlns:viewModels="clr-namespace:Client.ViewModels" 
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="692" Width="1230" WindowStartupLocation="CenterScreen">
+
+    <Window.DataContext>
+        <local:MainWindowViewModel />
+    </Window.DataContext>
+
+    <Window.Resources>
+        <DataTemplate DataType="{x:Type viewModels:VehicleViewModel}">
+            <views:VehicleView />
+        </DataTemplate>
+
+        <DataTemplate DataType="{x:Type viewModels:DriverViewModel}">
+            <views:DriverView />
+        </DataTemplate>
+    </Window.Resources>
+
     <Grid>
-        <Button Content="Logout" Click="Logout_Click" HorizontalAlignment="Left" Margin="362,195,0,0" VerticalAlignment="Top" Width="75"/>
-        <TextBox x:Name="TUsername" HorizontalAlignment="Left" Height="23" Margin="226,66,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="TPassword" HorizontalAlignment="Left" Height="23" Margin="351,66,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <Button Content="Login" Click="Login_Click" HorizontalAlignment="Left" Margin="489,69,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button Content="Test" Click="Test_Click" HorizontalAlignment="Left" Margin="362,269,0,0" VerticalAlignment="Top" Width="75"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <Grid x:Name="NavBar">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Button Content="Drivers" Command="{Binding NavCommand}" CommandParameter="drivers" Grid.Column="0" />
+            <Button Content="Vehicles" Command="{Binding NavCommand}" CommandParameter="vehicles" Grid.Column="2" />
+        </Grid>
+
+        <Grid x:Name="MainContent" Grid.Row="1">
+            <ContentControl Content="{Binding CurrentViewModel}" />
+        </Grid>
     </Grid>
+
 </Window>
