--- a/RaceManager/RaceManager.Client/MainWindow.xaml
+++ b/RaceManager/RaceManager.Client/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:RaceManager.Client"
         xmlns:views="clr-namespace:RaceManager.Client.Views"
         mc:Ignorable="d"
-        Title="MainWindow" Height="1382,744" Width="768" WindowStartupLocation="CenterScreen" WindowState="Maximized">
+        Title="MainWindow" Height="600" Width="800" WindowStartupLocation="CenterScreen">
 
     <Grid>
         <!--<Grid.ColumnDefinitions>
@@ -21,6 +21,6 @@
         <!--<views:RaceView x:Name="raceViewControl" Grid.Column="0" Grid.Row="0" />
         <views:DriverView x:Name="driverViewControl" Grid.Column="1" Grid.Row="0" />
         <views:VehicleView x:Name="vehicleViewControl" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" />-->
-        <views:VehicleView x:Name="vehicleViewControl" />
+        <views:DriverView x:Name="driverViewControl" />
     </Grid>
 </Window>
