--- a/RaceManager/RaceManager.Client/Views/DriverView.xaml
+++ b/RaceManager/RaceManager.Client/Views/DriverView.xaml
@@ -23,6 +23,7 @@
                 <Button Content="Refresh" Width="75" Margin="10,10,10,10" Command="{Binding RefreshCommand}" />
                 <Button Content="New" Width="75" Margin="10,10,10,10" Command="{Binding NewCommand}" />
                 <Button Content="Edit" Width="75" Margin="10,10,10,10" Command="{Binding EditCommand}" />
+                <Button Content="Copy" Width="75" Margin="10,10,10,10" Command="{Binding CopyCommand}" />
                 <Button Content="Delete" Width="75" Margin="10,10,10,10" Command="{Binding DeleteCommand}" />
             </StackPanel>
             <StackPanel Orientation="Horizontal">
